--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,9 @@ body {
     background: rgb(2,0,36);
     background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(121,9,35,1) 35%, rgba(0,212,255,1) 100%);
     color: white;
+    font-family: var(--ff-Accent);
+    align-content: center;
+    
 
 }
 h1 {
