--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,8 @@ body {
     color: white;
     font-family: var(--ff-Accent);
     align-content: center;
-    
+    text-align: center;
+    margin: 0 auto;
 
 }
 h1 {
