--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,11 +21,7 @@ h1 {
     font-family: var(--ff-Accent);
 }
 
-#resultDiv {
-    margin-bottom: 3.5em;
-}
-
 p {
     font-size: 4rem;
-    
+    margin-top: 2em;
 }
